--- a/text/ch2-zvp.tex
+++ b/text/ch2-zvp.tex
@@ -15,11 +15,11 @@ This chapter is organised as follows.
 
 
 \section{Introduction}
-Of primary interest in this thesis is the interaction of a relativistically intense short-pulse laser interacting with a solid density plasma target with a sharp density gradient. Now is presented an explanation of this interaction: the \ac{ZVP} mechanism of attosecond absorption of laser pulse energy, proposed by \textit{Baeva et al} \cite{baevaZeroVectorPotential2011} and later developed by \textit{Savin et al} \cite{savinAttosecondscaleAbsorptionExtreme2017,savinModellingLaserPlasmaInteractions2019}. Laser energy absorption in dense plasmas was first proposed by Wilks and Kruer \cite{wilksAbsorptionUltraIntenseLaser1992}, via a ponderomotive mechanism where plasma electrons are heated directly by the laser pulse via the so-called $\mathbf{J}\times \mathbf{B}$ force.
+Of primary interest in this thesis is the interaction of a relativistically intense short-pulse laser interacting with a solid density plasma target with a sharp density gradient. Now is presented an explanation of this interaction: the \ac{ZVP} mechanism of attosecond absorption of laser pulse energy, proposed by \textit{Baeva et al} \cite{baevaZeroVectorPotential2011} and later developed by \textit{Savin et al} \cite{savinAttosecondscaleAbsorptionExtreme2017,savinModellingLaserPlasmaInteractions2019}. 
 
 %At some point I should briefly chat about other absorption models (I think at the end of the intro - this will also include the stuff above. - Then I will start this chapter by talking about the case where JxB does not apply. ALso in the intro specify that for an overdense plasma, the laser does not propagate and must be reflected and hence we are generally talking about a laser-plasma surface interaction and the implications thereof.) Before this point I also want to discuss preplasmas.
 
-This thesis is interested in the `post-ponderomotive' regime where the frequency of the relativistic plasma oscillations ($\omega_\mathrm{p} \sim \sqrt{S}$) are greater than the $\mathbf{J}\times \mathbf{B}$ induced plasma electron oscillations at $2\omega_\mathrm{L}$. The plasma electrons' response is then fast enough to compensate the ponderomotive pressure of the laser pulse with the formation of electrostatic fields between electrons and ions and so respond adiabatically to the applied $\mathbf{J}\times \mathbf{B}$ force. Hence, plasma electrons cannot be heated directly by the laser pulse. Interestingly, working through this condition suggests the criterion for the \ac{ZVP} regime is $S > 4$, slightly more constraining than $S>1$ as is typically stated for the \ac{ZVP} regime \cite{savinModellingLaserPlasmaInteractions2019}. The resolution comes from understanding the plasma response. The bulk plasma must have $S>1$ to prevent relativistic transparency and so ensure a laser-surface interaction. Then the ponderomotive pressure of the laser is able to compress the front surface to densities such that the overdensity condition is satisfied. Note that to neglect the pre-adiabatic formation phase requires a sufficiently steep density gradient around the relativistic critical density surface (where $S=1$) to shift the main interaction to a region where this condition on the overdensity is satisfied. Pre-plasma formation and scale length will be discussed in great detail in a later chapter.
+Laser energy absorption in dense plasmas was first proposed by Wilks and Kruer \cite{wilksAbsorptionUltraIntenseLaser1992}, via a ponderomotive mechanism where plasma electrons are heated directly by the laser pulse via the so-called $\mathbf{J}\times \mathbf{B}$ force. This thesis is interested in the `post-ponderomotive' regime where the frequency of the relativistic plasma oscillations ($\omega_\mathrm{p} \sim \sqrt{S}$) are greater than the $\mathbf{J}\times \mathbf{B}$ induced plasma electron oscillations at $2\omega_\mathrm{L}$. The plasma electrons' response is then fast enough to compensate the ponderomotive pressure of the laser pulse with the formation of electrostatic fields between electrons and ions and so respond adiabatically to the applied $\mathbf{J}\times \mathbf{B}$ force. Hence, plasma electrons cannot be heated directly by the laser pulse. Interestingly, working through this condition suggests the criterion for the \ac{ZVP} regime is $S > 4$, slightly more constraining than $S>1$ as is typically stated for the \ac{ZVP} regime \cite{savinModellingLaserPlasmaInteractions2019}. The resolution comes from understanding the plasma response. The bulk plasma must have $S>1$ to prevent relativistic transparency and so ensure a laser-surface interaction. Then the ponderomotive pressure of the laser is able to compress the front surface to densities such that the overdensity condition is satisfied. Note that to neglect the pre-adiabatic formation phase requires a sufficiently steep density gradient around the relativistic critical density surface (where $S=1$) to shift the main interaction to a region where this condition on the overdensity is satisfied. Pre-plasma formation and scale length will be discussed in great detail in a later chapter.
 
 Provided all conditions are met, the ponderomotive pressure of the laser compresses the electrons at the front surface of the plasma and so shifts the laser-plasma surface interaction to plasma densities well beyond the relativistic critical density, leaving in its wake a positive space charge. This electron-ion charge separation leads to the formation of a \textit{pseudo-capacitor} electrostatic field. So we have entered a regime of adiabaticity where the plasma skin layer is confined within a potential well consisting of the ponderomotive pressure and the Coulomb potential of the pseudocapacitor field. Thus is formed a high density and spatially thin electron bunch (sometimes referred to as an electron sheath in the literature \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011}) at the plasma surface.
 
@@ -400,7 +400,7 @@ Simulation parameters in table \ref{tab:parameters}, such parameters are compati
 \end{table}
 Figure \ref{fig:zvp3d}c) clearly demonstrates the existence of high energy density electron bunches propagating through the plasma bulk in the direction of the laser pulse. Note that this ZVP criterion is required by conservation of transverse momentum inside the plasma bulk where the laser fields cannot propagate. Figure \ref{fig:zvp3d}b) shows these bunches escape to the rear of the bulk but lose energy as they do so. Looking now at figure \ref{fig:zvp3d}e) and the internal structure of the plasma bulk. These bunches drive two-stream and filamentation instabilities \cite{bretMultidimensionalElectronBeamplasma2010}. The bulk propagating bunches are accompanied by higher density electron buches to either side of the plasma block with the side switching every half laser pulse cycle. 
 
-The thickness of the target does not impact the interaction and is chosen for computational efficiency, indeed it is standard to consider such targets of thickness $\ge \lambda_\mathrm{L}$ as bulk targets \cite{dollar_2017_EnhancedLaserAbsorption}, however, for sufficiently long pulse durations, the effect of hole boring necessitates thicker targets to make this approximation.
+The thickness of the target does not impact the interaction and is chosen for computational efficiency, indeed it is standard to consider such targets of thickness $\ge \lambda_\mathrm{L}$ as bulk targets \cite{dollarEnhancedLaserAbsorption2017}, however, for sufficiently long pulse durations, the effect of hole boring necessitates thicker targets to make this approximation.
 
 
 
@@ -443,13 +443,14 @@ Finally figure \ref{label} compares the spectra of the reflected light in the pr
 % TODO: \usepackage{graphicx} required
 \begin{figure}
 	\centering
-	\includegraphics[width=0.7\linewidth]{"../../../Library/Mobile Documents/com~apple~CloudDocs/Documents/Oxford/DPhil/Sims/Smilei/3D/plots_ZVP_confirmation/zvp_hhg_beam_fourier"}
+	\includegraphics[width=0.7\linewidth]{figures/zvp/zvp_hhg_beam_fourier}
 	\caption[The Fourier transform of the reflected laser pulse in 3D PIC simulations.]{The Fourier transform of the reflected laser pulse in 3D PIC simulations both with and without zeroes in the vector potential.}
 	\label{fig:zvphhgbeamfourier}
 \end{figure}
 Unfortunately the simulation resolution is too low to resolve the individual harmonics however, the spectrum from the circularly polarised light is typically over two orders of magnitude below that for linearly polarised light. Thus, all defining characteristics of the ZVP mechanism have been identified in 3D simulations with the notable exception of the energy scalings. Next generation supercomputers will be required to perform such parameter scans.
 
-\textbf{**To do: these dynamics plots need fixing. Should add the times, also e and f have distance instead of time on y axis, also need to convert from timstep to time. D) needs teh scale changing. also the x axis needs converting to distance.**}
+\textbf{**To do: these dynamics plots need fixing. Should add the times, also e and f have distance instead of time on y axis, also need to convert from timstep to time. D) needs teh scale changing. also the x axis needs converting to distance. Also to do I need to change the colour of that FFT graph**}
+
 
 \subsection{The ZVP electron bunch}
 Following the success in reproducing the key features of the \ac{ZVP} mechanism and demonstrated consistency between 2 and 3D equivalent simulations, the remainder of this chapter will predominantly utilise 2D simulations to interrogate the mechanism further. Previous work on the ZVP mechanism has highlighted the high energ and short duration of electron bunches, however, until now much of the quantitative discussion of the properties of such bunches has avoided interrogation. A ZVP electron bunch is an electron bunch produced via the ZVP mechanism. Once produced and accelerated across the pseudocapacitor field, it is launched back in the laser propagation direction. While the bunch has no spatial separation over energies when propagating with the zero of the vector potential, the turning point of the electrons is longitudinal momentum dependent due to the Coulomb attraction of the ions after overshooting the pseudocapacitor field. Baeva \textit{et al} showed that the electron bunch has a quasi-monoenergetic spectrum: there is a one-to-one relationship between energy and position with the higher energies trailing the lower energies. The full bunch is confined to 130 as while a single energy confined to 5 as. If, however, the plasma bulk is transversely mass-limited relative to the laser spot size,when rotated back towards the plasma block, some of the electron bunch will overshoot and escape the potential well without significant stretching of the bunch in time as can be seen in figure \ref{fig:zvp3d}. Such electron bunches (retain the initial energy spread???? ie fast first as disucssed in RES paper) retain their high charge density and ultra-short duration. ZVP electron bunches can therefore be placed into two categories: ultra-high charge, ultra-short duraction electron bunches from mass-limited targets, hereafter labelled mass-limited electron bunches, of interest due to their unique properties and bulk propagating bunches, hereafter labelled bulk bunches, which have lower charge densities, are imprinted with instabilities and are instead of interest due to their connection to energy absorption and reflection in this post-ponderomotive regime.
@@ -516,7 +517,7 @@ where $\Delta y$ is the distance along $y$ from the plasma edge to the detection
 \begin{equation}\label{eq:zvp-gamma}
 	\gamma = 1 + (0.30)\times \frac{a^2_0}{\bar{n}_\mathrm{e}} + (1.2f)\times a'_0.
 \end{equation}
-Here the primed vector potential refers to the intensity of the subsequent peak of the laser pulse. This final term could be neglected or at least reduced somewhat once super-Gaussian spatial laser pulses become standard in this intensity regime or using a suitable plasma separator \cite{miyauchi_2004_LaserElectronAcceleration}. Both acceleration phases fail to meet the criteria of the Lawson-Woodward theorem. The ZVP phase is dependent on the existence of electrostatic forces, while the secondary phase occurs for a finite interaction region.
+Here the primed vector potential refers to the intensity of the subsequent peak of the laser pulse. This final term could be neglected or at least reduced somewhat once super-Gaussian spatial laser pulses become standard in this intensity regime or using a suitable plasma separator \cite{miyauchiLaserElectronAcceleration2004}. Both acceleration phases fail to meet the criteria of the Lawson-Woodward theorem. The ZVP phase is dependent on the existence of electrostatic forces, while the secondary phase occurs for a finite interaction region.
 
 Fitting equation \ref{eq:zvp-gamma} to the PIC simulation data presented in figure \ref{fig:zvpmeangammas} finds
 \begin{equation}
@@ -534,7 +535,7 @@ The relative error between data and theory is plotted in figure \ref{fig:zvp-log
 	\caption[The relative errors for each mean energy data point compared to figure \ref{fig:zvpmeangammas}.]{The relative errors for each mean energy data point compared to figure \ref{fig:zvpmeangammas}. The orange triangles indicate data points for which the model fails to predict the mean energy.}
 	\label{fig:zvp-logabserrortedit}
 \end{figure}
-Those points marked by an orange triangle have associated errors of over an order of magnitude. Reassuringly, such points occur only after the onset of QED effects, known to impact the ZVP mechanism \cite{savin_2019_EnergyAbsorptionLaserQED} and for $S<1$, that is, where the plasma becomes relativistically transparent to the laser pulse, a fundamentally different regime. Equally, for non-relativistic laser intensities, where assumptions of electron coherency cannot be made, are poorly fit by the model. It is particularly interesting that there is no indication that large $S$ causes a breakdown of the model, extending the applicability of the model further than previously considered, opening up the field to a wider range of conditions, such as that of shock compressed plasmas. To summarise, it would appear the ZVP model is valid for $10 \le a_0 \le 300$ and $S\ge1$.
+Those points marked by an orange triangle have associated errors of over an order of magnitude. Reassuringly, such points occur only after the onset of QED effects, known to impact the ZVP mechanism \cite{savinEnergyAbsorptionLaserQED2019} and for $S<1$, that is, where the plasma becomes relativistically transparent to the laser pulse, a fundamentally different regime. Equally, for non-relativistic laser intensities, where assumptions of electron coherency cannot be made, are poorly fit by the model. It is particularly interesting that there is no indication that large $S$ causes a breakdown of the model, extending the applicability of the model further than previously considered, opening up the field to a wider range of conditions, such as that of shock compressed plasmas. To summarise, it would appear the ZVP model is valid for $10 \le a_0 \le 300$ and $S\ge1$.
 
 
 
@@ -565,15 +566,15 @@ Fitting the total energy within the range of validity established for the ZVP mo
 \begin{equation}
 	U \sim a^{2.01\pm0.003}_0,
 \end{equation}
-reproducing with great success the anticipated scaling within the ZVP regime. It is also quite satisfying that the number of electrons and bunch mean energies both follow their anticipated ZVP scalings, further evidence this is not a simple ponderomotive effect. By extracting specific bunch total energies, rather than just the peak energies of the plasma block as a whole as was performed in previous studies, this is a far more direct confirmation of energy absorption by the ZVP mechanism into electron bunches. This is highlighted by the difference in results obtained for this study compared to a previous study by Savin \textit{et al} \cite{savin_2019_EnergyAbsorptionLaserQED} when investigating the QED regime as will be discussed later. It was not possible to reproduce the constants of equation \ref{eq:zvp_U} as the neutralising return current in the plasma bulk generates an electrostatic field on the rear side of the plasma block, decelerating bulk electron bunches as they escape the plasma. It should be possible to calculate the deceleration by considering the number of electrons expelled by the plasma. It is however, clear from the simulations that at least some electrons in the escaping bunch are trapped by this rear-side potential well reducing its magnitude.
+reproducing with great success the anticipated scaling within the ZVP regime. It is also quite satisfying that the number of electrons and bunch mean energies both follow their anticipated ZVP scalings, further evidence this is not a simple ponderomotive effect. By extracting specific bunch total energies, rather than just the peak energies of the plasma block as a whole as was performed in previous studies, this is a far more direct confirmation of energy absorption by the ZVP mechanism into electron bunches. This is highlighted by the difference in results obtained for this study compared to a previous study by Savin \textit{et al} \cite{savinEnergyAbsorptionLaserQED2019} when investigating the QED regime as will be discussed later. It was not possible to reproduce the constants of equation \ref{eq:zvp_U} as the neutralising return current in the plasma bulk generates an electrostatic field on the rear side of the plasma block, decelerating bulk electron bunches as they escape the plasma. It should be possible to calculate the deceleration by considering the number of electrons expelled by the plasma. It is however, clear from the simulations that at least some electrons in the escaping bunch are trapped by this rear-side potential well reducing its magnitude.
 
-While equation \ref{eq:zvp_U} describes energy absorption into hot electron bunches, the coupling of such hot collisionless electrons to the bulk plasma given the lack of collisionality is necessarily indirect. There are two key mechanisms \cite{sherlock_2014_IndepthPlasmawaveHeating}. Firstly, via a cooler resistive return current of electrons that neutralises the current of the injected hot electrons that escape the potential well of the front surface (cite this, the refernce in sherlock 2014 is not great). Since all hot electrons travel at approximately speed $c$, the magnitude of the return current depends not on the total energy absorbed but instead on the total number of electrons injected, as given by equation \ref{eq:zvp-Ne}, depending linearly on laser spot area and the electric field magnitude and not on the plasma density\footnote{Note that for a sufficiently thin target, the return current induces an electrostatic field on the back surface of the target which can then reflect hot electron bunches and decelerate them to the point of a return to collisionality. This is a reality for the PIC simulations explored in this thesis, however, since realistic targets are much thicker this shall be neglected.}. Secondly, via the formation of large amplitude bulk plasma waves induced in the wake of the hot electron bunches. Sherlock \textit{et al} \cite{sherlock_2014_IndepthPlasmawaveHeating} calculate the magnitude of the induced wakefield to be
+While equation \ref{eq:zvp_U} describes energy absorption into hot electron bunches, the coupling of such hot collisionless electrons to the bulk plasma given the lack of collisionality is necessarily indirect. There are two key mechanisms \cite{sherlockIndepthPlasmawaveHeating2014}. Firstly, via a cooler resistive return current of electrons that neutralises the current of the injected hot electrons that escape the potential well of the front surface (cite this, the refernce in sherlock 2014 is not great). Since all hot electrons travel at approximately speed $c$, the magnitude of the return current depends not on the total energy absorbed but instead on the total number of electrons injected, as given by equation \ref{eq:zvp-Ne}, depending linearly on laser spot area and the electric field magnitude and not on the plasma density\footnote{Note that for a sufficiently thin target, the return current induces an electrostatic field on the back surface of the target which can then reflect hot electron bunches and decelerate them to the point of a return to collisionality. This is a reality for the PIC simulations explored in this thesis, however, since realistic targets are much thicker this shall be neglected.}. Secondly, via the formation of large amplitude bulk plasma waves induced in the wake of the hot electron bunches. Sherlock \textit{et al} \cite{sherlockIndepthPlasmawaveHeating2014} calculate the magnitude of the induced wakefield to be
 \begin{equation}
 	E_\mathrm{W} = \frac{eN_\mathrm{e}c}{\omega_\mathrm{p}\epsilon_0} = \sigma \sqrt{\frac{m_\mathrm{e}\epsilon_0}{n_\mathrm{e}}}E_\mathrm{L},
-\end{equation}where here the bunch velocity has been set to $c$, bulk electrons will be accelerated by $E_\mathrm{W}$ and their kinetic energy converted to heat via collisions. Interestingly, this reproduces the mid temperature electon scaling with density that was observed by Chrisman \textit{et al} \cite{chrisman_2008_IntensityScalingHot} in their study of hot electron energy coupling in cone-guided fast ignition of inertial fusion targets. This is a significantly different possible explanation to their self-declared 'hand waving argument'. Excluding this study, such formulations for heat transfer to the plasma bulk within the ZVP regime remain untested in simulations.
+\end{equation}where here the bunch velocity has been set to $c$, bulk electrons will be accelerated by $E_\mathrm{W}$ and their kinetic energy converted to heat via collisions. Interestingly, this reproduces the mid temperature electon scaling with density that was observed by Chrisman \textit{et al} \cite{chrismanIntensityScalingHot2008} in their study of hot electron energy coupling in cone-guided fast ignition of inertial fusion targets. This is a significantly different possible explanation to their self-declared 'hand waving argument'. Excluding this study, such formulations for heat transfer to the plasma bulk within the ZVP regime remain untested in simulations.
 
 
-Note also that as the laser pulse intensity rises, the fraction of energy absorbed by the ion species increases. Savin \cite{savin_2019_ModellingLaserPlasmaInteractions} determined for $S=1/2$, $a_0 = 100$, that this would be almost 20\%. Energy is absorbed by ions via the hole boring mechanism as described elsewhere in this thesis.
+Note also that as the laser pulse intensity rises, the fraction of energy absorbed by the ion species increases. Savin \cite{savinModellingLaserPlasmaInteractions2019} determined for $S=1/2$, $a_0 = 100$, that this would be almost 20\%. Energy is absorbed by ions via the hole boring mechanism as described elsewhere in this thesis.
 
 
 \subsection{Unpacking the QED effects of figure \ref{fig:zvppeakgamma}}
@@ -622,7 +623,7 @@ Note that ZVP does not describe the peak energies in the bunches, then JxB appli
 \section{Planned future work}\label{sec:zvp-future_work}
 As Niels Bohr famously said, `Nothing exists until it is measured'. While this statement was in reference to quantum mechanics, perhaps the proliferation of sources of uncertainty inherent to state-of-the-art PIC codes justifies application of the statement to this work. After a successful proposal application, four weeks of beam time have been award on the GEMINI-PW laser facility at the \ac{CLF} \cite{__LaserSystemGemini}. Next July, the study of mass-limited ZVP electron bunches will be put to the test as part of a three-pronged experimental campaign. These are
 \begin{enumerate}
-	\item Characterise the X-ray \ac{HHG} emission from the reflection of a relativistic laser of a solid target, following on from a recent experiment at the ORION laser facility at AWE \cite{hopps_2013_OverviewLaserSystems}, which is discussed in great detail in the following chapter;
+	\item Characterise the X-ray \ac{HHG} emission from the reflection of a relativistic laser of a solid target, following on from a recent experiment at the ORION laser facility at AWE \cite{hoppsOverviewLaserSystems2013}, which is discussed in great detail in the following chapter;
 	\item Simultaneously measure and correlate \ac{HHG} and the ZVP electron bunches responsible for the \ac{HHG} using a novel experimental setup;
 	\item Apply the attosecond X-ray \ac{HHG} beam as a diagnostic tool in a proof of principle warm dense matter experiment.
 \end{enumerate}
@@ -643,7 +644,7 @@ The GEMINI-PW laser facility housed at the \ac{CLF} is a petawatt class facility
 
 
 \subsubsection{Targets}
-A range of thick, flat solid targets are proposed to probe the density parameter space: diamond, a selection of plastics (polymethyl methacrylate, low and high density polyethylene and polycarbonate) and mirrored targets, which produced interesting and slightly unexpected results in the ORION experiment. It would also be interesting to produce foam targets gaining access the optimal low $S$ regime \cite{batani_2014_PhysicsIssuesShock}. Target wheels will be used to take full advantage of the high shot rate of the GEMINI-PW laser. It is anticipated that due to focal spot jitter, not all shots will hit the target edges. 
+A range of thick, flat solid targets are proposed to probe the density parameter space: diamond, a selection of plastics (polymethyl methacrylate, low and high density polyethylene and polycarbonate) and mirrored targets, which produced interesting and slightly unexpected results in the ORION experiment. It would also be interesting to produce foam targets gaining access the optimal low $S$ regime \cite{bataniPhysicsIssuesShock2014}. Target wheels will be used to take full advantage of the high shot rate of the GEMINI-PW laser. It is anticipated that due to focal spot jitter, not all shots will hit the target edges. 
 
 \subsubsection{Diagnostics}
 The electron bunches will be measured using an electron spectrometer placed a few centimetres from the target to measure the time-integrated energy spectrum. The spectrometer will be shielded from the laser pulse and any \ac{HHG} in transmission using a flash coated kapton foil which should not significantly hinder the MeV electron bunches produced in the interaction. Mordovanakis \textit{et al} used Image Plate stacks to obtain the electron bunch structure and emission angle, it may be necessary to perform this first to accurately position the spectrometer. While resolving attosecond durations remains an outstanding challenge of experimental science, it may be possible to measure the total duration of the train of attosecond electron bunches by measuring the characteristics of coherent optical transition radiation produced by the electrons upon incidence on a secondary target \cite{linIsolatedAttosecondElectron2020}. The X-ray \ac{HHG} emission will be measured using the OHREX spectrometer \cite{beiersdorferLineshapeSpectroscopyVery2016} on loan from ORION, a spherically bent crystal spectrometer with ultra-high resolution and high-signal-to-noise ratio. Lower order harmonics will be measured using angularly resolved EUV spectrometers. Note that in the absence of attosecond resolution diagnostics, measuring the harmonic spectrum of the coherent \ac{HHG} is the only way to reconstruct the temporal shape of the pulse. Simulations have suggested that the reflected spectrum produced by Coherent Synchrotron Emission of the electron bunches is approximately Fourier-limited \cite{cousensElectronTrajectoriesAssociated2020}. Off-axis spectrometers should be used to compare the signals to the background emission and to measure the plasma temperature \cite{akli_2010_DualChannelXray}. A quarter wave plate could be used to convert the incoming laser pulse to a circular polarisation to compare the signals to those detected in the absence of zeros in the vector potential.
